{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 4689,
  "lineage": "a5ae10f2-7ebf-8869-5a62-2e752d3b8ad9",
  "resources": [
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.16.1",
            "id": "projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "vasten1a-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "private_ip_google_access": true,
            "project": "control-sys-124",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "vasten1a-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "private_ip_google_access": true,
            "project": "control-sys-124",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5900"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5901"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5902"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-21T01:32:24.394-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/control-sys-124/global/firewalls/vasten1a-ssh-public",
            "name": "vasten1a-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "priority": 1000,
            "project": "control-sys-124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/firewalls/vasten1a-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "vasten1a-nat"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "vasten1a-nat"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-21T01:32:56.314-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/control-sys-124/global/firewalls/vasten1a-ssh-private",
            "name": "vasten1a-ssh-private",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "priority": 1000,
            "project": "control-sys-124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/firewalls/vasten1a-ssh-private",
            "source_ranges": [
              "10.0.0.0/20",
              "10.0.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "vasten1a-no-ip"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-10-21T01:32:24.389-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/control-sys-124/global/firewalls/vasten1a-private-allow-ingress",
            "name": "vasten1a-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "priority": 1000,
            "project": "control-sys-124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/firewalls/vasten1a-private-allow-ingress",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "vasten1a-nat",
              "vasten1a-no-ip"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "NAT_instance",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "NAT_instance_ext",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/control-sys-124/global/networks/vasten1a-network",
            "name": "vasten1a-network",
            "project": "control-sys-124",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "router",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-21T01:32:24.510-07:00",
            "id": "projects/control-sys-124/regions/us-west1/routers/vasten1a-router",
            "name": "vasten1a-router",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "project": "control-sys-124",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/regions/us-west1/routers/vasten1a-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-21T01:32:26.003-07:00",
            "gateway_address": "10.0.16.1",
            "id": "projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "vasten1a-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "private_ip_google_access": true,
            "project": "control-sys-124",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-private"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-21T01:32:24.605-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "vasten1a-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/control-sys-124/global/networks/vasten1a-network",
            "private_ip_google_access": true,
            "project": "control-sys-124",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/control-sys-124/regions/us-west1/subnetworks/vasten1a-subnetwork-public"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}